# harborbeacon

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HarborBeacon-Harbor-Collaboration-Contract-v2.md  HarborBeacon-HarborGate-v2.0-Upgrade-Runbook.md  HarborBeacon-LocalAgent-Plan.md  HarborBeacon-LocalAgent-Roadmap.md  README.md  justfile
debian/: control  harboros-beacon.service  harboros-featured-photos.service  postinst  prerm  semantic-router.service
debian-ffmpeg/: control
docs/: HarborBeacon-CI-Contract-Pipeline-Checklist-v1.md  HarborBeacon-Contract-E2E-Test-Plan-v1.md  HarborBeacon-Files-BatchOps-Contract-v1.md  HarborBeacon-GitHub-Actions-Workflow-Draft-v1.md  HarborBeacon-Harbor-Collaboration-Contract-v2.md  HarborBeacon-Harbor-Collaboration-Contract-v3.md  HarborBeacon-HarborGate-Agent-Contract-v1.2.md  HarborBeacon-HarborGate-Agent-Contract-v1.4.md  HarborBeacon-HarborGate-Agent-Contract-v1.md  HarborBeacon-HarborGate-v1.5-Cutover-Evidence.md  HarborBeacon-HarborGate-v2.0-Upgrade-Runbook.md  HarborBeacon-HarborOS-Control-Collaboration-Contract-v1.md  HarborBeacon-LocalAgent-DocumentIndex.md  HarborBeacon-LocalAgent-LaunchChecklist.md  HarborBeacon-LocalAgent-MeetingGuide.md  HarborBeacon-LocalAgent-Plan.md  HarborBeacon-LocalAgent-QuickRef.md  HarborBeacon-LocalAgent-Roadmap.md  HarborBeacon-LocalAgent-V2-Assistant-Skills-Roadmap.md  HarborBeacon-Middleware-Endpoint-Contract-v1.md  HarborBeacon-Planner-TaskDecompose-Contract-v1.md  HarborBeacon-Skill-Spec-v1.md  V1-plan.md  aiot-camera-canary-watchlist.md  aiot-device-media-ingest-watchlist.md  aiot-image-retrieval-canary-evidence.md  aiot-tapo-native-access-acceptance.md  harbor-assistant-offline-delivery-runbook.md  harbor-framework-protocol-map.md  harborbeacon-agent-prompt-checklist.md  harborbeacon-new-collaborator-brief.md  harborgate-to-harborbeacon-walkthrough.md  harbornas-iso-packaging-dependencies.md  harbornavi-k3-deployment-2026-05-27.md  harbornavi-k3-event-action-weixin-closeout-2026-06-02.md  harbornavi-k3-local-vision-event-2026-05-27.md  harbornavi-k3-p1-4ch-mixed-simulation-2026-05-27.md  harbornavi-k3-p1-replay-fixture.md  harbornavi-k3-riscv-precheck-2026-05-27.md  harbornavi-mlp-vpf-p0-branch.md  (+8 more)
plans/: audit-coverage-summary.json  latency-summary.json  rust-live-e2e-report.json  rust-live-mutation-e2e-report.json
scripts/: build_harbornavi_k3_deb.sh  fetch_hf_bootstrap_model.py  harbornavi_k3_yolov8_analyzer.py  harbornavi_p1_replay_fixture.sh  run_e2e_suite.py  verify_harboros_beacon_deb.sh  (+1 more)
(+96 files in other folders)
