[package]
name = "harborbeacon_local_agent"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "harboros-beacon"
path = "src/bin/harborbeacon_service.rs"

[[bin]]
name = "harboros-beacon-agent"
path = "src/main.rs"

[[bin]]
name = "validate-contract-schemas"
path = "src/bin/validate_contract_schemas.rs"

[[bin]]
name = "run-e2e-suite"
path = "src/bin/run_e2e_suite.rs"

[[bin]]
name = "run-drift-matrix"
path = "src/bin/run_drift_matrix.rs"

[[bin]]
name = "evaluate-release-gate"
path = "src/bin/evaluate_release_gate.rs"

[[bin]]
name = "agent-hub-admin-api"
path = "src/bin/agent_hub_admin_api.rs"

[[bin]]
name = "assistant-task-api"
path = "src/bin/assistant_task_api.rs"

[[bin]]
name = "harbor-model-api"
path = "src/bin/harbor-model-api.rs"

[[bin]]
name = "harborbeacon-service"
path = "src/bin/harborbeacon_service.rs"

[[bin]]
name = "benchmark-local-model-backend"
path = "src/bin/benchmark_local_model_backend.rs"

[[bin]]
name = "harbornavi-k3-local-vision-smoke"
path = "src/bin/harbornavi_k3_local_vision_smoke.rs"

[[bin]]
name = "harbornavi-k3-multi-vision-smoke"
path = "src/bin/harbornavi_k3_multi_vision_smoke.rs"

[[bin]]
name = "harbornavi-event-notification-smoke"
path = "src/bin/harbornavi_event_notification_smoke.rs"

[[bin]]
name = "harbornavi-ha-mqtt-event-contract-smoke"
path = "src/bin/harbornavi_ha_mqtt_event_contract_smoke.rs"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
glob = "0.3"
which = "8.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "json", "multipart", "rustls-tls"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tiny_http = "0.12"
qrcodegen = "1.8"
if-addrs = "0.13"
quick-xml = "0.38"
markitdown = "0.1.11"
candle = { package = "candle-core", version = "0.10.2" }
candle-nn = "0.10.2"
candle-transformers = { version = "0.10.2", default-features = false }
hf-hub = { version = "0.4.1", default-features = false, features = ["ureq"] }
tokenizers = { version = "0.22.0", default-features = false }

[patch.crates-io]
rig-core = { path = "vendor/rig-core-0.8.0" }
